--- a/package.json
+++ b/package.json
@@ -8,15 +8,38 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@commitlint/cli": "^16.3.0",
+    "@commitlint/config-conventional": "^16.2.4",
     "@types/node": "18.11.9",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.27.0",
-    "eslint-config-next": "13.0.2",
-    "next": "13.0.2",
+    "eslint-config-next": "13.0.3",
+    "gray-matter": "^4.0.3",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.3",
+    "mdx-bundler": "^9.0.1",
+    "nprogress": "^0.2.0",
+    "postcss": "^8.4.19",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-prism-plus": "^1.5.0",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
+    "tailwindcss": "^3.2.3",
+    "typescript": "4.8.4"
+  },
+  "dependencies": {
+    "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
+    "esbuild": "^0.15.13",
+    "lodash-es": "^4.17.21",
+    "next": "13.0.3",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "recoil": "^0.7.6"
   }
 }
