--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.6"
+    "recoil": "^0.7.6",
+    "tailwind-merge": "^1.8.0"
   }
 }
