--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
   "css.validate": false,
+  "typescript.tsdk": "node_modules\\.pnpm\\typescript@4.8.4\\node_modules\\typescript\\lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
