--- a/package.json
+++ b/package.json
@@ -6,9 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install",
+    "lint:fix": "eslint . --fix"
+  },
+  "dependencies": {
+    "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
+    "esbuild": "^0.15.13",
+    "lodash-es": "^4.17.21",
+    "next": "13.0.3",
+    "next-themes": "^0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "recoil": "^0.7.6",
+    "tailwind-merge": "^1.8.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.31.0",
     "@commitlint/cli": "^16.3.0",
     "@commitlint/config-conventional": "^16.2.4",
     "@types/node": "18.11.9",
@@ -31,16 +46,14 @@
     "tailwindcss": "^3.2.3",
     "typescript": "4.8.4"
   },
-  "dependencies": {
-    "clsx": "^1.2.1",
-    "date-fns": "^2.29.3",
-    "esbuild": "^0.15.13",
-    "lodash-es": "^4.17.21",
-    "next": "13.0.3",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "recoil": "^0.7.6",
-    "tailwind-merge": "^1.8.0"
+  "lint-staged": {
+    "*. {ts, tsx, js, jsx}": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*. {json, yml}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
